2006-11-17  Simon Budig  <simon@gimp.org>

	* app/core/gimpparamspecs.c: Hack up gimp_value_set_item() to do
	the correct thing for subtypes of GimpItems.

	* app/actions/plug-in-commands.c: Don't rely on the GimpValues for
	type checking, pass the param specs to the _collect functions and
	use them for typechecking.

2006-11-17  Michael Natterer  <mitch@gimp.org>

	* app/actions/tools-actions.c
	* app/actions/tools-commands.[ch]: added actions and callbacks for
	the new paint options brush scale property. Assigned new
	shortcuts: '<' and '>' are now changing tool-value-1 and '[' and
	']' are changing tool-value-2

	* app/actions/context-actions.c: removed the shortcuts from the
	brush size actions.

	* app/tools/gimpbrushtool.c
	* app/tools/gimpcolortool.c: set tool-value-2 to brush-scale and
	to color-average-radius, so '[' and ']' always affect the size of
	the tip of the active tool. tool-value-1 is connected to
	context-opacity so that is changeable using '<' and '>' now.

2006-11-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpui.override: override the wrapper for
	gimp_int_combo_box_get_active() and let it return the selected
	integer instead of the index in the combo (bug #376102).

2006-11-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/ccanalyze.c: removed file information as this is
	now shown in the "Image Properties" dialog.

2006-11-16  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.c (store_string): A minor
	optimization. Don't bother to store normalized string.

2006-11-16  Simon Budig  <simon@gimp.org>

	* plug-ins/pygimp/gimpfu.py: added PF_VECTORS type.

	* plug-ins/pygimp/gimpui.py
	* plug-ins/pygimp/gimpui.override: add code for the vectors combo box

	* plug-ins/pygimp/gimpui.defs
	* plug-ins/pygimp/gimpmodule.c
	* plug-ins/pygimp/pygimp-api.h: changed accordingly, untabbified.

	* plug-ins/pygimp/pygimp.h: untabbified.

2006-11-16  Michael Natterer  <mitch@gimp.org>
